fixed some test cases